Use separate PaintFlags for the spaced tile shader

We would setup the tile shader using the same PaintFlags that we had
(partially) set up for the actual image draw. This meant that we'd draw
the shader picture using the same blend mode, which could easily end up
yielding nothing.

Set up a "fresh" PaintFlags for the tile shader as needed instead, using
only flags relevant for the shader.

Bug: 919637
Change-Id: Id141daca481ce3f90ed0c1f44c801eafcef5964b
Reviewed-on: https://chromium-review.googlesource.com/c/1401045
Reviewed-by: Stephen Chenney <schenney@chromium.org>
Reviewed-by: Florin Malita <fmalita@chromium.org>
Commit-Queue: Fredrik Söderquist <fs@opera.com>
Cr-Commit-Position: refs/heads/master@{#621188}
Former-commit-id: 189b2bc3704c10a54affb203a08469f164c8420a